<resources>
    <string name="app_name">ExpenX</string>
    <string name="e">E</string>
    <string name="circle_of_e">Circle of E</string>
    <string name="don_t_have_an_account">Don\'t have an account? Create one</string>
    <string name="all_rights_reserved_2017_savick">All Rights Reserved © 2017 SAVICK</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="expenx">ExpenX</string>
    <string name="login_with_google">LOGIN WITH GOOGLE</string>
    <string name="or_via_email">───────or via Email───────</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_expenx">ExpenxActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_user_name_str" />
    <string name="nav_user_email_str" />

    <string name="register">REGISTER</string>
    <string name="lastName">Last Name</string>
    <string name="firstName">First Name</string>

    <string name="change_password">Change Password</string>
    <string name="set_default_currency">Set Default Currency</string>
    <string name="logout">Logout</string>

    <string name="reminder_add">Remind Me To Add Income/Expense</string>
    <string name="reminder_frequency">Frequency</string>

    <string-array name="frequency_array">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Quaterly</item>
        <item>Yearly</item>
    </string-array>

    <string name="when_to_remind">When To Remind</string>

    <string name="currency_converter_amount">Amount</string>
    <string name="currency_converter_converted"></string>
    <string name="button_convert">CONVERT</string>


    <!--for calculator-->
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="ac">AC</string>
    <string name="ok">OK</string>
    <string name="clear">C</string>
    <string name="percent">%</string>
    <string name="divide">/</string>
    <string name="multiply">x</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="double_zero">00</string>
    <string name="dot">.</string>
    <string name="equal">=</string>

    <!--income/expense category spinner-->
    <string-array name="income_expense_category">
        <item>Category</item>
        <item>Travel</item>
        <item>Food</item>
        <item>Medical</item>
        <item>Other</item>
    </string-array>

    <string-array name="payment_methods">
        <item>Payment Method</item>
        <item>Cash</item>
        <item>Cheque</item>
        <item>Money Order Payment</item>
        <item>Credit Card Payment</item>
        <item>Debit Card Payment</item>
        <item>Online Payment</item>
        <item>Gift Card</item>
        <item>Voucher</item>
        <item>Bitcoin</item>
        <item>Other</item>
    </string-array>

    <!--Debt Activity-->

    <string name="lend">LEND TO</string>

    <string name="borrow">BORROW FROM</string>

    <string name="lend_to_name">Lend to</string>

    <string name="lend_to_amount">Amount</string>

    <string name="lend_to_date">Date</string>

    <string name="lend_to_due_date">Due Date</string>

    <string name="lend_to_payment">Payment Method</string>

    <string name="lend_to_ref">Ref/Check No</string>

    <string name="lend_to_disc">Description</string>

    <string name="borrow_name">Borrow From</string>

    <string name="borrow_amount">Amount</string>

    <string name="borrow_date">Date</string>

    <string name="borrow_due_date">Due Date</string>

    <string name="borrow_payment">Payment Method</string>

    <string name="borrow_ref">Ref/Check No</string>

    <string name="borrow_desc">Description</string>

    <string name="action1">Action1</string>

    <string name="action2">Action2</string>

    <string name="action3">Action 3</string>

</resources>

