<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.expenx.expenx.activity.SettingsActivity">

    <Button
        android:id="@+id/buttonChangePassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_normal"
        android:text="@string/change_password"
        android:textColor="@color/colorText" />

    <Button
        android:id="@+id/buttonSetDefaultCurrency"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/buttonChangePassword"
        android:background="@drawable/button_normal"
        android:text="@string/set_default_currency"
        android:textColor="@color/colorText" />

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/buttonSetDefaultCurrency"
        android:background="@drawable/button_normal"
        android:text="@string/logout"
        android:textColor="@color/colorText" />
</RelativeLayout>
