<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_reminder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.expenx.expenx.activity.ReminderActivity">

    <TextView
        android:id="@+id/textViewReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false"
        android:text="@string/reminder_add"
        android:textColor="@color/colorText"
        android:textSize="18dp" />

    <Switch
        android:id="@+id/ReminderToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/textViewFrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ReminderToggle"
        android:layout_marginTop="24dp"
        android:text="@string/reminder_frequency"
        android:textColor="@color/colorText"
        android:textSize="18dp" />

    <Spinner
        android:id="@+id/frequency_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textViewFrequency"
        android:backgroundTint="@color/colorText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frequency_spinner"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/textViewWhenToRemind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="9"
            android:text="@string/when_to_remind"
            android:textColor="@color/colorText"
            android:textSize="18dp" />

        <ImageButton
            android:id="@+id/textClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@color/transparent"
            android:gravity="end"
            android:layout_weight="1"
            android:onClick="showTimePickerDialog"
            android:src="@drawable/ic_select_time" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textColor="@color/colorText"
        android:background="@drawable/button_normal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/fab_margin"
        android:text="Save"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
